# openxd

./: .gitignore  Cargo.toml  Makefile
backend/: Cargo.toml
backend/src/: dependency.rs  design.rs  device.rs  lib.rs  shape.rs
standalone/: Cargo.toml
standalone/src/: main.rs
ui/: Cargo.toml
ui/src/: container.rs  lib.rs  menubar.rs
web-backend/: Cargo.toml
web-frontend/: .gitignore  Cargo.toml  index.html  index.js  package.json
web-frontend/src/: app.rs
