[package]
name = "web-frontend"
version = "0.1.0"
edition = "2021"
description = "Frontend functionalities for the cloud service"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "^0.2"
ui = {path="../ui"}
yew = "0.19"
